fixed minimessages not working in item lore